Update api schemas and update buildora styling and dependencies
